--- a/pages/school/detail/detail.wxss
+++ b/pages/school/detail/detail.wxss
@@ -64,7 +64,7 @@
 .certified-badge-large {
   width: 40rpx;
   height: 40rpx;
-  background-color: #ff6b9d;
+  background-color: rgb(226, 175, 22);
   color: #ffffff;
   border-radius: 50%;
   display: flex;
@@ -297,6 +297,15 @@
   font-size: 32rpx;
   font-weight: 600;
   color: #333333;
+}
+
+.certified-badge {
+  padding: 4rpx 12rpx;
+  background-color: rgb(226, 175, 22);
+  color: #ffffff;
+  font-size: 20rpx;
+  border-radius: 6rpx;
+  flex-shrink: 0;
 }
 
 .union-desc {
